@@ -16,6 +16,8 @@ glibc (2.3.2.ds1-13) UNRELEASED; urgency=low
      (Closes: #245657)
    - debian/local/manpages/locale.1: Fix typo: LOC_PATH -> LOCPATH.
      (Closes: #246557)
+   - debian/rules: Fix build correctly when we execute "debian/rules binary".
+     Patched by Jurij Smakov <jurij@wooyd.org>.  (Closes: #247241)
 
    - debian/debhelper.in/libc-udeb.install: Add libnss_files.so*,
    - debian/libnss-dns-udeb, libnss-dns-files: Update description.
